# Project_1

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test.json  test_reports.py  test_services.py  test_utils.py  test_views.py
